# Stellar-Media-Organizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  NAS_INTEGRATION.md  README.md  alldebrid_downloader.py  config.env.example  config.py  gpu_converter_service.py  imdb_lookup.py  media_organizer.py  music_downloader.py  music_organizer.py  neonoir_cleaner.py  package.json  pyproject.toml  requirements.txt  restart.sh  standalone_backend.py  start.bat  start.ps1  start.sh
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
assets/screenshots/: .gitkeep
core/: __init__.py  ai_metadata_extractor.py  constants.py  database.py  discogs_lookup.py  exceptions.py  imdb_client.py  language_utils.py  metadata_client.py  nas_transfer.py  omdb_client.py  plex_client.py  smart_renamer.py  smb_manager.py  tautulli_client.py  tmdb_client.py
scripts/: fix_nas_metadata.py  install-service.sh  process_music_album.py  setup-dev.sh  stellar-service.sh  watchdog.sh
scripts/systemd/: stellar-media-organizer.service
tests/: __init__.py  test_config.py  test_exceptions.py
webapp/: .env.example  .gitignore  README.md  docker-compose.yml  start.sh  start_dev.bat  start_dev.ps1  start_dev.sh  stop.sh
webapp/backend/: .env.example  .gitignore  Dockerfile  ffmpeg-wrapper.sh  pyproject.toml  requirements.txt  run_dev.sh
webapp/backend/app/: __init__.py  main.py
webapp/backend/app/api/: routes.py
webapp/backend/app/core/: config.py
webapp/backend/app/models/: schemas.py
webapp/backend/app/services/: media_service.py  video_converter.py
webapp/frontend/: .prettierrc  UI_SHOWCASE.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  run_dev.sh  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
webapp/frontend/src/: App.tsx  index.css  vite-env.d.ts
webapp/frontend/src/components/: ActiveConversions.tsx  AllDebridPanel.tsx  ConversionProgress.tsx  DownloadAnimation.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  JobHistory.tsx  LogViewer.tsx  MusicActivityDashboard.tsx  MusicAllDebridPanel.tsx  MusicDownloadPanel.tsx  MusicOrganizer.tsx  NASPanel.tsx  OperationPanel.tsx  PlexDashboard.tsx  PosterUploadModal.tsx  StatusCard.tsx  UniverseBackground.tsx
webapp/frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
webapp/frontend/src/lib/: api.ts  utils.ts
webapp/frontend/src/types/: index.ts
