[project]
name = "media-organizer-pro"
version = "6.1.0"
description = "High-performance media file organizer with IMDB integration and GPU conversion"
requires-python = ">=3.10"
dependencies = [
    "python-multipart>=0.0.12",
    "pymkv2>=2.1.2",
    "rich",
    "requests",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "bitmath>=1.3.3.1",
    "python-iso639>=2025.11.16",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.5",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ========== Ruff Configuration ==========
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
    "webapp/frontend",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), pydocstyle (D), 
# pyupgrade (UP), and more
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "N812",    # Lowercase imported as non-lowercase
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["ARG001", "PLR2004"]  # Allow unused args and magic values in tests

[tool.ruff.lint.isort]
known-first-party = ["core", "config"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

# ========== MyPy Configuration ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymkv.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

# ========== Pytest Configuration ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=core",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ========== Coverage Configuration ==========
[tool.coverage.run]
source = ["core", "config"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

